--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Princeeee26
+title: Midterm Task 2
 show downloads: true
 #theme: jekyll-theme-hacker
 remote_theme: pages-themes/hacker@v0.2.0
